# rocket-authz

./: Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml  release.yml
examples/: rbac_with_pattern_policy.csv
src/: lib.rs
tests/: test_fairing.rs  test_fairing_domain.rs
