[package]
name = "rocket-authz"
version = "0.1.0"
authors = ["RobotHuang <1183598761@qq.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Casbin rocket access control middleware"
homepage= "https://github.com/casbin-rs/rocket-authz"
readme= "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casbin = { version = "2.0.7", default-features = false, features = ["cached", "runtime-async-std", "logging", "incremental"] }
tokio = { version = "1.4.0", features = ["fs", "io-util"] }
rocket = "0.4.7"